--- a/home/templates/sources/maths/calcul/competence5.html
+++ b/home/templates/sources/maths/calcul/competence5.html
@@ -96,4 +96,7 @@
         à \(10^{-3}\) près, à \(10^{-2}\) par défaut et à \(10^{-1}\) par excès</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
