--- a/home/templates/sources/maths/calcul/competence6.html
+++ b/home/templates/sources/maths/calcul/competence6.html
@@ -209,4 +209,7 @@ while j &lt borne_sup:
 </div>
 </section>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
