--- a/home/templates/sources/maths/calcul/competence7.html
+++ b/home/templates/sources/maths/calcul/competence7.html
@@ -286,4 +286,7 @@ print(liste_diviseurs)</code></pre>
 </div>
 </section>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
