--- a/home/templates/sources/maths/calcul/competence8.html
+++ b/home/templates/sources/maths/calcul/competence8.html
@@ -71,13 +71,16 @@
 
 <h4>Les étapes de la démonstration</h4>
 
-<ol>
+<ul>
     <li>on raisonne par l'absurde, donc on postule que \(\frac{1}{6}\) est un nombre décimal</li>
     <li>on fait ressortir la propriété caractéristique des nombres décimaux, \(\frac{a}{10^n}\) avec \(a \in \mathbb{Z}\) et \(n \in \mathbb{N}\). Attention,
         \(a \in \mathbb{Z}\) et \(n \in \mathbb{N}\) est très important, cela permet d'affirmer qu'un nombre est décimal et pas quelconque
     </li>
     <li>on fait ressortir une impossibilité, \(10^n\) est multiple de 6 et n'est pas multiple de 6</li>
     <li>on en conclut que l'hypothèse de départ est fausse donc \(\frac{1}{6}\) n'est pas un nombre décimal.</li>
-</ol>
+</ul>
+
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
 
 {% endblock cours %}
