--- a/home/templates/sources/maths/calcul/competence9.html
+++ b/home/templates/sources/maths/calcul/competence9.html
@@ -41,4 +41,7 @@
 <p>intersection : \([-3; 2[ \cap [1; +\infty[=[1; 2[\)</p> 
 <p>réunion : \([-3; 2[ \cup [1; \infty[=[-3; +\infty[\)</p>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
