--- a/home/templates/sources/maths/calcul_litteral/competence0.html
+++ b/home/templates/sources/maths/calcul_litteral/competence0.html
@@ -164,4 +164,7 @@ si \hspace{0.3cm} a\leq 0, \hspace{0.8cm} \sqrt{a^2} = -a \\
 </ul>
 </p>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
