--- a/home/templates/sources/maths/calcul_litteral/competence1.html
+++ b/home/templates/sources/maths/calcul_litteral/competence1.html
@@ -350,5 +350,8 @@ donc \(C=(x+4)((x-2)-(2x-3))=(x+4)(x-2-2x+3)=(x+4)(-x+1)\)</p>
 	<p><strong>A vous de jouer : </strong>factorisez \(a b^2+a^3 b^3\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
 
