--- a/home/templates/sources/maths/calcul_litteral/competence10.html
+++ b/home/templates/sources/maths/calcul_litteral/competence10.html
@@ -106,4 +106,7 @@ A partir du graphe ci-dessous représentant une fonction \(f\), trouver la pente
 	</p>
 	</div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
