--- a/home/templates/sources/maths/calcul_litteral/competence2.html
+++ b/home/templates/sources/maths/calcul_litteral/competence2.html
@@ -107,4 +107,7 @@
 	<p>\(x^2-10x+25\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
