--- a/home/templates/sources/maths/calcul_litteral/competence4.html
+++ b/home/templates/sources/maths/calcul_litteral/competence4.html
@@ -255,4 +255,7 @@ else:
 	<p>\(7x-3=-6x+8\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
