--- a/home/templates/sources/maths/calcul_litteral/competence5.html
+++ b/home/templates/sources/maths/calcul_litteral/competence5.html
@@ -271,4 +271,7 @@ qu'on obtient par le calcul, qui permet de choisir la bonne formule pour la solu
 <section class="px-5 py-5 bg-white">
 <div class="container">
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
