--- a/home/templates/sources/maths/calcul_litteral/competence6.html
+++ b/home/templates/sources/maths/calcul_litteral/competence6.html
@@ -93,4 +93,7 @@
 
 <p>Essayez maintenant d'obtenir à l'aide de Python les résultats des calculs que vous venez de faire manuellement. Pour rappel, la multiplication utilise le symbole * et la division le symbole / en Python.</p>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
