--- a/home/templates/sources/maths/calcul_litteral/competence7.html
+++ b/home/templates/sources/maths/calcul_litteral/competence7.html
@@ -59,5 +59,8 @@ nombre négatif.</p>
     <p><strong>A vous de jouer : </strong>Résoudre l'inéquation \(5x-7 &lt 2x+1\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
 
