--- a/home/templates/sources/maths/calcul_litteral/competence8.html
+++ b/home/templates/sources/maths/calcul_litteral/competence8.html
@@ -96,4 +96,7 @@
 	<p>Résoudre l'inéquation \(|3x|&lt-7\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
