--- a/home/templates/sources/maths/calcul_litteral/competence9.html
+++ b/home/templates/sources/maths/calcul_litteral/competence9.html
@@ -102,4 +102,7 @@
 <p><strong>A vous de jouer :</strong><br/>1. Trouver l'antécédent de 7 par la fonction \(f\) telle que \(f(x)=\frac{x+3}{2}\)<br/>2. Trouver l'antécédent de 3 par la fonction \(f\) telle que \(f(x)=\frac{1}{x}\)</p>
 </div>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
