--- a/home/templates/sources/maths/statistiques/competence0.html
+++ b/home/templates/sources/maths/statistiques/competence0.html
@@ -10,6 +10,22 @@
 
 {% block cours %}
 
+<!-- script for latex mathjax -->
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      extensions: ["tex2jax.js"],
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+        inlineMath: [ ["\\(","\\)"] ],
+        displayMath: [ ["\\[","\\]"] ],
+        processEscapes: true
+      },
+      "HTML-CSS": { availableFonts: ["TeX"] }
+    });
+</script>
+<script type="text/javascript"
+        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
+
 <p>Le but de cette activité est de comprendre comment les statistiques descriptives permettent 
     d'analyser une situation et de prendre des décisions.</p>
 
