--- a/home/templates/sources/maths/statistiques/competence1.html
+++ b/home/templates/sources/maths/statistiques/competence1.html
@@ -45,7 +45,7 @@
 
 <p>Si on tire dix fois au sort un chiffre à l'aide d'un dé à 6 faces, il se peut qu'on n'obtienne jamais le chiffre 5. Cela ne signifie pas que la probabilité d'obtenir 5 soit nulle, mais 
     que la fréquence d'apparition du chiffre 5 est nulle. Une probabilité est une valeur théorique conforme à une loi alors qu'une fréquence 
-    d'apparition est une mesure qu'on relève. Dans le cas de notre exemple avec un dé, pour obtenir un résultat conforme à la loi de probabilité de \(\frac{1}{6}\), il faut effectuer un grand nombre de tirages.</p>
+    d'apparition est une mesure qu'on relève. Dans le cas de notre exemple avec un dé, pour obtenir un résultat conforme à la loi de probabilité de 1 / 6, il faut effectuer un grand nombre de tirages.</p>
 
 <p>Voici une vidéo publiée par Veritasium sur YouTube qui met en garde contre certaines idées reçues concernant les statistiques et les probabilités : <a href="https://youtu.be/1tSqSMOyNFE" target="_blank">How we're fooled by statistics</a></p>
 
