--- a/home/templates/sources/maths/statistiques/competence4.html
+++ b/home/templates/sources/maths/statistiques/competence4.html
@@ -137,4 +137,7 @@
 
 <p>Le taux d'évolution réciproque est naturellement donné par la formule \(t_{rec}=CM_{rec}-1\)</p>
 
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
+
 {% endblock cours %}
