--- a/home/static/home/styles/style55 (copie).css
+++ b/home/static/home/styles/style55 (copie).css
@@ -1,10 +1,57 @@
 /* couleurs
 target: all pages */
 :root{
-  --couleur_titre:#17aa80;
-  --couleur_important: #e08859; /*#cb3b3b*/
-  --couleur_retenir: #9c5593;
-  --couleur_lien: #85857b; /* A REMPLACER PETIT A PETIT PAR lightslategray */
+  --couleur_titre:#61c9a8;
+  --couleur_important: #ed9b40;
+  --couleur_retenir: #ed9b40;
+  --couleur_lien: lightslategray; 
+  --couleur_nav: #61c9a8;
+  --couleur_fond: #c6e7dc;
+  --couleur_2: #aa8f66;
+  --couleur_3: #ffeedb;
+  --couleur_4: #ba3b46;
+}
+
+.separateur{
+  border-bottom:2px solid lightgray;
+  margin-top:2%;
+  margin-bottom:2%;
+}
+
+.invisible{
+  visibility:hidden !important;
+  padding-top:7%;
+}
+.img_ombre{
+  width:100%;
+  border-radius:10px;
+  box-shadow:2px 8px 10px 2px lightslategray;
+}
+
+.annonce_quiz{
+  font-size:1.5em;
+}
+
+.couleur_reponseCorrecte {
+  color:white;
+  background-color:#49b749;
+  padding-right:3%;
+  padding-left:3%;
+}
+
+.couleur_reponseIncorrecte {
+  color:white;
+  background-color: #db4f4f;
+  padding-left:3%;
+  padding-right:3%;
+}
+
+.quiz-container{
+  margin: 0 auto;
+}
+
+.bg-gris{
+  background-color:lightgray;
 }
 
 /* couleur de fond
@@ -31,6 +78,16 @@ p{
   font-family: Arial, Cambria;
   font-size: 1.2em;
   color: black;
+  text-align: justify;
+}
+
+iframe{
+  height:auto;
+  width:100%;
+  aspect-ratio:16/9;
+}
+.p3_index{
+  font-size:1.5em;
 }
 
 /* blocs ligne et colonne
@@ -62,21 +119,32 @@ target: toutes les pages */
 }
 
 /* titres
-target: toutes les pages */
+target: toutes les pages */ 
+
+h1{
+  color:black;
+}
+
 h2{
   color: black;
   font-family: Arial, Cambria;
   font-size: 2em;
   text-align: center;
   margin-top: 10%;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
 }
-
+.toketa{
+  background: -webkit-linear-gradient(45deg, var(--couleur_titre), var(--couleur_retenir) 30%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 h3{
-  color: var(--couleur_titre);
+  /* primary color */
+  color:var(--couleur_titre);
   font-family: Arial, Cambria;
   font-size: 1.5em;
-  margin-top: 5%;
+  font-weight:bold;
+  margin-top: 3%;
   /* comptage titre h3 */
   counter-increment: section;
   counter-reset: subsection;
@@ -87,24 +155,22 @@ h3:before{
   content: counter(section) ". ";
 }
 
-.h3_index{
-  color: black;
-  font-family: Arial, Cambria;
-  font-size: 1.5em;
-  margin-top: 5%;
-}
-
 h4{
   color: var(--couleur_titre);
   font-family: Arial, Cambria;
   font-size: 1.2em;
-  margin-top: 5%;
+  font-weight:bold;
+  margin-top: 3%;
 }
 
 /* partie separee par un saut de ligne, integrant du code
 target: toutes les pages*/ 
 pre{
   color: black;
+}
+
+code{
+  color:slategray;
 }
 
 /* photo qui s'eloigne 
@@ -143,32 +209,8 @@ target: index.php */
   }
 }
 
-/* section sous le header
-target: toutes les pages */
-.principal{  
-    padding-left: 10%;
-    padding-right: 10%;
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column; 
-}
+/* bootstrap */
 
-/* section en blanc pour les parties maths
-target: toutes les pages de maths */
-.rappel{
-  border-top: 3px lightslategray solid;
-  border-bottom: 3px lightslategray solid;
-  background-color: lightgray;
-  margin-top: 5%;
-  padding-bottom: 5%;
-}
-
-/* to write upside down 
-target: index.php */
-.upsidedown{
-  -webkit-transform: rotateX(180deg);
-  transform: rotateX(180deg);
-}
 
 a{
     color: lightslategray;
@@ -181,23 +223,6 @@ a:hover{
     color: var(--couleur_important);
 }
 
-.a_index2{
-  color: lightslategray;
-  margin-left: 30%;
-}
-
-.a_index2:hover{
-  color: var(--couleur_important);
-}
-
-.a_index{
-  color:lightslategray;
-  margin-left:0;
-}
-
-.a_index:hover{
-  color:var(--couleur_important);
-}
 
 
 /* tables */
@@ -230,7 +255,9 @@ th{/* descripteurs */
   background-color: white;
 }
 
-
+ul{
+  color:black;
+}
 /* listes
 target: toutes les pages */
 li{
@@ -240,11 +267,18 @@ li{
   color: black;
 }
 
+.fieldsetDefinition > ul{
+  color: var(--couleur_retenir);
+}
+
+.fieldsetDefinition > ul > li{
+  color: var(--couleur_important);
+}
+
 /* section 'A vous de jouer'
 target: toutes les pages */
 .exerciceApplication{
-    background-color: lightcyan;
-    border-left: 7px var(--couleur_titre) solid;
+    border-left: 4px black dashed;
     padding-left: 1%;
     padding-right: 1%;
     margin-top: 1%;
@@ -254,36 +288,55 @@ target: toutes les pages */
 /* section exemple type
 target: toutes les pages de maths */
 .exerciceType{
-  border-left: 4px black dashed;
+  background-color: var(--couleur_fond);/*#cee6ec;*/
   padding-left:1%;
   margin-top: 1%;
   margin-bottom: 1%;
 }
 
+/* section resume a la fin de chaque section
+target: toutes les pages de python */
+.resume{
+  background-color: var(--couleur_fond);
+  padding:1%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+/* section quiz a la fin de chaque questionnaire unique
+target: toutes les pages de python */
+.quizUnique{
+  background-color: lightslategray;
+  padding:1%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.essentiel{
+  border: 4px var(--couleur_titre) dashed;
+  background-color: var(--couleur_fond);
+  padding:1%;
+  padding-top:0;
+}
+
 /* encadre important 
 target: toutes les pages */
 .fieldsetDefinition{
-  border-left: 4px var(--couleur_retenir) dashed;
-  padding: 1%;
   margin-top: 3%;
   margin-bottom: 3%;
 }
 
 .fieldsetDefinition > h4{
-  color: var(--couleur_retenir);
+  color: var(--couleur_4);
   margin-top: 0%;
 }
 
 .fieldsetDefinition > p{
-  color: var(--couleur_retenir);
+  color: var(--couleur_4);
 } 
 
 .fieldsetDefinition > li{
-  color: var(--couleur_retenir);
-}
-
-.rappel .fieldsetDefinition p{
-  color: var(--couleur_retenir);
+  color: var(--couleur_4);
 }
 
 /* images
@@ -300,64 +353,14 @@ figcaption{
   font-style: italic;
 }
 
-/* menu navigation
-target: header.php */
-header{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  top: 0%; /* sets the position at the top of the screen */
-  position: fixed; /* the header does not move */
-  margin: 0;
-  width:100%;
-  background-color: white;
-  z-index:1; /* the header is displayed above other content */
-}
-
-#navig_laptop{
-    list-style-type: none;
-    overflow: hidden;
-    background-color: white;
-    margin: 0;
-    width: 100%;
-}
-
-#navig_laptop li{
-    float: left;
-    list-style-type: none;
-}
-
-#navig_laptop li a{
-    color: var(--couleur_titre);
-    display: block;
-    text-align: left;
-    text-decoration: none;
-    padding: 14px 26px;
-    font-size: 1em;
-    font-weight: bold;
-}
-
-#navig_laptop li .bouton{
-  margin-left: 26px;
-}
-
-#navig_laptop li a:hover:not(.active){
-    color: var(--couleur_important);
-}
 
 label{
-  color:white;
+  color:black;
   font-size:1em;
+  margin-bottom:5px;
+  margin-left:5px;
 }
 
-
-/* pied de page
-target: footer.php */
-footer{
-    background-color: white;
-    padding-bottom: 5%;
-    margin-top: 5%;
-}
 
 footer p{
 color: var(--couleur_lien);
@@ -381,6 +384,13 @@ color: var(--couleur_lien);
     box-shadow:2px 8px 10px 2px lightslategray;
   }
 
+  /* pour centrer une image */
+  .center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .bloc_choix_contenu p{
     color: var(--couleur_lien);
   }
@@ -399,9 +409,10 @@ target: all pages */
 .bouton{
     line-height: 2;
     padding: 5px 10px;
+    margin-bottom: 10px;
     border: 0;
     font-size: 1em;
-    background-color: var(--couleur_titre);
+    background-color:var(--couleur_nav);
     color: white;
     border-radius: 10px;
     font-family: Arial, Cambria;
@@ -410,42 +421,32 @@ target: all pages */
 }
 
 .bouton:hover{
-    background-color: lightgray;
+    background-color: var(--couleur_2);
     cursor: grab;
 }
 
-/* bouton pour fiche memo
+/* bouton 
 target: all pages */
-.ficheMemo{
-  background-color: white;
-  border: 5px var(--couleur_titre) solid;
-  border-radius: 10%;
-  width: 40%;
-}
-
-/* bouton de fiche mémo 
-target: table of content pages */
 .bouton2{
   line-height: 2;
-  width: 60%;
-  margin-bottom: 2%;
-  padding: 5px;
-  border: 3px var(--couleur_titre) solid;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border: 0;
   font-size: 1em;
-  background-color: white;
+  background-color:white;
+  color: var(--couleur_titre);
   border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: var(--couleur_titre);
   font-family: Arial, Cambria;
   cursor: pointer;
   transition: background-color 500ms;
 }
 
-.bouton2 > a{
-  color:black;
-  font-size: 1.1em;
-}
-
 .bouton2:hover{
-  background-color:lightgray;
+  color: var(--couleur_2);
+  border-color: var(--couleur_2);
   cursor: grab;
 }
 
@@ -462,44 +463,6 @@ target: table of content pages */
     transform: scale(1.03);
   }
 
-  .gridContainerTableMatieres {
-    display: grid;
-    grid-template-columns: 45% 55%;
-    margin-top: 5%;
-   
-  }
-  .gridItemTableMatieres {
-    text-align: left;
-    padding:25px;
-  }
-  .gridItemTableMatieres > h2{
-    
-    text-align: left;  
-    margin-top:0;
-  }
-
-  .gridContainerIndex{
-    display: grid;
-    grid-template-columns: 70% 30%;
-    margin-top: 5%;
-    }
-    .gridItemIndex {
-    text-align: left;
-    padding:15px;
-    display:flex;
-    flex-direction:column;
-  }
-
-  .gridContainerIndex2{
-    display: grid;
-    grid-template-columns: auto auto;
-    margin-top: 5%;
-    }
-    .gridItemIndex2 {
-    text-align: left;
-    display:flex;
-    flex-direction:column;
-  }
   
   /* fait clignoter */
 .blink_me {
@@ -520,7 +483,7 @@ target: pages tables de matieres */
 
 /* forme la balle */
 .ball{
-  background: linear-gradient(#e66465, #9198e5); 
+  background: linear-gradient(var(--couleur_important), var(--couleur_nav)); 
   height: 150px;
   width : 150px;
   border-radius: 50%;
