--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -23,7 +23,7 @@
 
 <!-- INTRODUCTION -->
 
-<section class="px-5 pb-5 my-1 bg-white">
+<section class="pb-5 my-1 bg-white">
     <div class="container">
         <p>Ne restez pas bloqué devant une difficulté. Des conseils, 
         des astuces, ce site s'adresse à tous ceux qui veulent progresser en programmation
@@ -43,7 +43,7 @@
 
 <!-- IMAGES PRESENTATION -->
 
-<section class="px-5 py-5 my-1 bg-white">
+<section class="py-5 my-1 bg-white">
     <div class="container">
         <div class="row gx-0 gy-2 gy-md-0 pb-4">
             <div class="col-12 col-md-6">
@@ -68,7 +68,7 @@
 
 <!-- TRAVAUX PRATIQUES -->
 
-<section class="px-5 pt-5 pb-3 mt-1" style="background-color:lightgray;">
+<section class="pt-5 pb-3 mt-1" style="background-color:lightgray;">
     <div class="container">
         <div class="row gy-3 gx-md-4 mb-3">
             <h2 class="text-start">Ma sélection de travaux pratiques</h2>
@@ -124,7 +124,7 @@
 
 <!-- QUIZ ----->
 
-<section class="px-5 pb-5 mb-1 bg-white">
+<section class="pb-5 mb-1 bg-white">
     <div class="container">
         <h2 class="text-start my-5">Ma sélection de Quiz</h2>
         <div class="row">
@@ -147,7 +147,7 @@
     </div>
 </section>
     
-<section class="px-5 py-2 bg-white">
+<section class="py-2 bg-white">
     <div class="container">
         <p class="separateur"></p>
     </div>
@@ -156,7 +156,7 @@
 
 <!-- VIDEOS -->
 
-<section class="px-5 py-5 my-1 bg-white">
+<section class="py-5 my-1 bg-white">
     <div class="container">
         <div class="row">
             <h2 class="text-start my-0">Ma sélection de vidéos</h2>
@@ -204,7 +204,7 @@
 </div>
 -->
 
-<section class="px-5 py-2 bg-white">
+<section class="py-2 bg-white">
     <div class="container">
         <p class="separateur"></p>
     </div>
@@ -213,7 +213,7 @@
 
 <!-- ACTUALITES -->
 
-<section class="px-5 py-5 my-1 bg-white">
+<section class="py-5 my-1 bg-white">
     <div class="container">
         <h2 class="text-start mt-0">Actualités</h2>
         <div class="row">
@@ -230,48 +230,7 @@
     </div>
 </section>
 
-
-<!-- Animations de la page index -->
-<style>
-    * {
-        box-sizing: border-box;
-    }
-    
-    .mySlides {
-        display: none;
-    }
-    
-    img {
-        vertical-align: middle;
-    }
-    
-    /* Slideshow container */
-    .slideshow-container {
-      max-width: 1000px;
-      position: relative;
-      margin: auto;
-    }
-    
-    /* Fading animation */
-    .fade {
-      animation-name: fade;
-      animation-duration: 2s;
-    }
-    
-    @keyframes fade {
-      from {opacity: .2;} 
-      to {opacity: 1;}
-    }
-    
-    /* On smaller screens, decrease text size */
-    @media only screen and (max-width: 300px) {
-      .text {
-        font-size: 11px;
-    }
-    }
-    </style>
-
-<section class="px-5 py-2 bg-white">
+<section class="py-2 bg-white">
     <div class="container">
         <p class="separateur"></p>
     </div>
@@ -280,7 +239,7 @@
 
 <!-- FORMULAIRE -->
 
-<section class="px-5 pb-5 pt-3 bg-white">
+<section class="pb-5 pt-3 bg-white">
     <div class="container">
         <h2 class="text-start mt-0">Ils en parlent le mieux</h2>
         <div class="row">
