--- a/home/templates/sources/maths/calcul/competence4.html
+++ b/home/templates/sources/maths/calcul/competence4.html
@@ -93,5 +93,10 @@
 <div class="row">
     <div class="my-3 col-12">
 		<iframe src="{% static 'home/documents/valeurAbsolue.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
+	</div>
+</div>
+
+<!-- script for latex mathjax -->
+{% include '../../../mathjax.html' %}
 
 {% endblock cours %}
