--- a/home/templates/sources/nsi/internet/competence11.html
+++ b/home/templates/sources/nsi/internet/competence11.html
@@ -3,98 +3,148 @@
 
 {% block contenu %}
 <ul>
-    <li>les moteurs de recherche</li>
-	<li>les méta-moteurs</li>
-	<li>des robots qui parcourent le Web</li>
-	<li>le référencement naturel</li>
-	<li>le deep Web</li>
+    <li>le principe des réseaux sociaux</li>
+    <li>les traces numériques</li>
+    <li>comment les réseaux sociaux se rémunèrent</li>
+    <li>une bulle informationnelle</li>
+    <li>la dérive des fake news</li>
+    <li>le harcèlement lié aux réseaux sociaux</li>
 </ul>
 {% endblock contenu %}
+
+{% block tampon %}
+<p class="tampon">COURS ...</p>
+{% endblock tampon %}
 
 {% block cours %}
 
 <h3>Introduction</h3>
 
-<p>Pour commencer, une question simple, mais pas si simple : </p>
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>Google est une société qui développe de multiples applications et 
-		solutions informatiques. Mais lorsqu'on se rend sur le Web pour utiliser Google, s'agit-il d'un moteur de 
-		recherche ou d'un navigateur ? Et qu'en est-il de Chrome ? Faites-vous bien la différence ?</p>
-</div>
+<p>La vidéo suivante publiée par <em>Absolute Motivation</em> sur YouTube met en avant les dangers des <em>social medias</em> :
+<br/><a href="https://www.youtube.com/watch?v=PmEDAzqswh8" target="_blank">&#127911; video Social Media - Absolute Motivation</a></p>
 
-<h3>Les moteurs de recherche</h3>
+<!-- QUELS RESEAUX SOCIAUX -->
+<h3>Le principe des réseaux sociaux</h3>
 
-<p>Un moteur de recherche est une application qui permet d'effectuer des recherches sur Internet à partir de mots clés. 
-	Un navigateur facilite l'utilisation du Web et fournit des services pour enregistrer dans les favoris, retrouver l'historique, 
-	télécharger une page, ... Un navigateur utilise bien évidemment le serveur DNS pour traduire les adresses URL en adresses IP, 
-	et le protocole HTTP pour accéder au Web. Rappel, le protocole HTTPS est la version sécurisée du protocole HTTP, utilisée par 
-	exemple lors de transactions sur le Web.</p>
+<p>Les réseaux sociaux se construisent à partir de communautés qui partagent des intérêts communs, et qui sont 
+    reliées entre elles par des liens faibles. Ces liens faibles permettent donc de rassembler dans un même réseau 
+    des sous-groupes d'individus qui n'ont pas forcément beaucoup de points communs. Par exemple si vous avez changé 
+    d'école, votre réseau Instagram pourrait être composé de vos amis rencontrés dans votre ancienne école, mais également
+     de vos amis de classe actuels. Ces liens faibles semblent anodins alors qu'ils sont en réalité 
+    particulièrement importants, vu qu'ils permettent de relier des individus que rien ne rapproche a priori. 
+    Ils facilitent ainsi la circulation de l'information à grande échelle.</p>
 
-	<div class="exerciceApplication">
-		<p><strong>A vous de jouer : </strong>trouvez au moins trois navigateurs de marque différente et trois moteurs de 
-		recherche de marque différente.</p>
-	</div>
-
-
-<h3>Les méta-moteurs</h3>
-
-<p>Les méta-moteurs sont des logiciels qui utilisent plusieurs moteurs de recherche généralistes pour afficher un classement des informations suite à une requête. Un méta-moteur permet ainsi de gagner du temps lors d'une requête en évitant à l'utilisateur d'effectuer ses recherches auprès de plusieurs moteurs de recherche séparément.</p>
-
-
-<h3>Des robots parcourent le Web</h3>
-
-<p>Des programmes appelés robots parcourent le Web, indexent les pages dans des bases de données à partir des 
-	mots qu'elles contiennent et suivent chaque lien qu'ils rencontrent. Cela permet aux moteurs de recherche 
-	de gagner du temps lors d'une requête. Cela permet également à certaines agences (nationales ou commerciales) 
-	d'effectuer efficacement des recherches sur Internet, en laissant tourner en permanence ces programmes. 
-	Attention donc, il ne s'agit pas de robots tels qu'on peut les imaginer avec une ossature métallique. </p> 
-
-<h3>Le référencement naturel</h3>
-
-<p>	Il est souvent évoqué la neutralité d'Internet comme principe garantissant l'égalité de traitement des informations. En fait cette neutralité s'applique aux FAI (Fournisseurs d'Accès Internet) qui ne doivent pas examiner ou altérer le contenu d'une page ou en limiter l'accès en fonction du profil de ses utilisateurs. Toutefois, cette neutralité ne s'applique plus au niveau des moteurs de recherche, des sites ou encore des réseaux sociaux.</p>
-
-<p>En ce qui concerne les moteurs de recherche, ceux-ci sont affectés à la fois par le référencement naturel, le profil de l'utilisateur qu'ils ont préalablement mémorisés, et les contrats publicitaires qui ont pu être passés.</p>
-
-<p>Le principe du référencement naturel repose sur le fait que plus un site est cité par d'autres sites, plus il est pertinent sur le Web.</p>  
-
-<div class="exerciceType">
-	<p><strong>Exercice type : </strong>calculer le référencement naturel de chacun des sites Web ci-dessous, sachant qu'une flèche partant du site A vers le site B représente un lien présent dans une page du site A, quoi pointe vers le site B.</p>
-<img src="{% static 'home/images/nsi/referencement_sujet.png' %}" alt="référencement naturel" width=35%>
-
-	<p>Solution : <br/>
-		<em>Etape 1 - calculer le point de chacun des liens</em><br/>
-		au départ chaque site possède un score de 1.<br/>
-		Le site A pointe vers 3 sites, donc chacun de ses liens a une valeur de \(\frac{1}{3}\).<br/>
-		Le site B pointe vers 1 seulu site, donc son lien a une valeur de 1.<br/>
-		Le site C pointe vers 2 autres sites, donc chacun de ses liens a une valeur de \(\frac{1}{2}\).<br/>
-		Le site D pointe vers 3 sites, donc chacun de ses liens a une valeur de \(\frac{1}{3}\).<br/>
-	</p>
-
-		<img src="{% static 'home/images/nsi/referencement_correction.png' %}" alt="référencement naturel" width=35%>
-		<p><em>Etape 2 - pour chaque site rajouter à son poids initial de 1 les valeurs des liens dont il est destinataire</em><br/>
-		Le site A obtient un référencement naturel de \(1 + 1 + \frac{1}{2} + \frac{1}{3} = 2,83\).<br/>
-		Le site B obtient un référencement naturel de \(1 + \frac{1}{3} + \frac{1}{3} = 1,67\).<br/>
-		Le site C obtient un référencement naturel de \(1 + \frac{1}{3} + \frac{1}{3} = 1,67\).</br>
-		Le site D obtient un référencement naturel de \(1 + \frac{1}{2} + \frac{1}{3} = 1,83\).
-	<p>
-</div> 
+<p>La vidéo suivante publiée par <em>Lumni</em> sur YouTube met en avant le temps passé quotidiennement sur les réseaux sociaux :
+    <br/><a href="https://youtu.be/ltTHAE_C-XI" target="_blank">&#127911; video Réseaux sociaux tous accros - Lumni</a></p>
+            
 
 <div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong> Calculer le référencement naturel de chacun des sites suivants :</p>
-	<img src="{% static 'home/images/nsi/referencement_exercice.png' %}" alt="référencement naturel" width=35%>
+<p><strong>A vous de jouer : </strong><br/>1) Enoncez les réseaux sociaux que vous connaissez, en indiquant ce qui caractérise chacun d'entre eux.<br/>
+2) A l'aide d'une recherche sur Internet, trouvez le nombre d'abonnés de chacun de ces réseaux sociaux pour l'année
+ dernière. Quel est le réseau le plus influent parmi ceux qui vous utilisez ?</p>
 </div>
 
-<p>Google propose un module <em>Analytics</em> pour connaître le trafic et les différentes statistiques liées au site Web que vous avez créé. Il est possible d'améliorer le référencement final de votre site, par rapport à son référencement naturel.</p>
+<h4>Avis des élèves</h4>
+<p>"C'est un moyen d'avoir une vie sociale plus active et de pouvoir communiquer plus directement."</p>
+<p>"C'est un moyen plus dangereux de communiquer, vu que c'est à travers un écran et qu'on ne sait pas vraiment avec 
+    qui on parle.</p>
+
+
+<!-- LES TRACES NUMERIQUES -->
+<h3>Les traces numériques</h3>
+
+<p>Dès qu'un utilisateur consulte le Web, il laisse des traces numériques involontaires (dans l'historique du moteur de recherche, dans 
+    les cookies des sites, ...), puis des traces numériques volontaires lorsqu'il crée un compte en 
+    s'identifiant et en répondant à diverses questions. Le regroupement de ces traces numériques, d'un réseau social à 
+un autre, construit l'identité numérique de chaque utilisateur qui est stockée et mise à jour en permanence dans des bases 
+de données. Les algorithmes des réseaux sociaux permettent d'affiner la personnalité numérique des utilisateurs et de 
+proposer en permanence des invitations ciblées ou du contenu approprié sur le feed personnel d'un utilisateur. </p>
 
 <div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>comment améliorer le référencement de votre site Web ?</p>
+    <p><strong>A vous de jouer : </strong>comment l'utilisateur peut-il assurer sa confidentialité sur le Web ?</p>
+    </div>
+
+<!-- COMMENT LES RESEAUX SOCIAUX SE REMUNERENT ILS -->
+<h3>Comment les réseaux sociaux se rémunèrent</h3>
+
+<p>La plupart des réseaux sociaux sont gratuits. Ils ne trouvent donc pas dans l'abonnement leur principale source de revenue. En fait, les réseaux sociaux collectent et stockent une importante quantité de données personnelles, qu'ils revendent ensuite à des fins commerciales. Pour cela, les réseaux sociaux ont besoin de maintenir le plus longtemps possible les utilisateurs sur leurs plateformes, et utilisent des coockies pour enregistrer l'information.</p>
+
+<p>Chaque saisie clavier est enregistrée, chaque clic pour choisir une image, une vidéo, un lien est analysé par intelligence artificielle, chaque localisation géographique est conservée. Chaque proposition faite par un réseau social, qu'elle soit rejetée ou acceptée par l'utilisateur est interprétée pour imaginer les habitudes et les centres d'intérêt de cet utilisateur. Par la suite, de la publicité ciblée en fonction des goûts de l'utilisateur mais également de sa position géographique lui sera proposée. On parle de tracking publicitaire qui consiste à combiner les données marketing personnelles avec les données géolocalisées. Cette publicité, bien plus efficace qu'une publicité grand public, rapporte énormément d'argent aux réseaux sociaux.</p>
+
+<p>Le système des Adwords rapporte de l'argent à certains réseaux sociaux. Le placement publicitaire en haut d'une page de recherche pour contrebalancer le référencement naturel est payant. En outre, à chaque fois qu'un utilisateur clique sur un lien publicitaire en haut d'une page, affecté d'un préfixe <em>ad</em>, cela rapporte également de l'argent.</p>
+
+<p>Le financement des réseaux sociaux est donc basé sur techniques commerciales :
+<ul>
+    <li><p>collecte massive de données qui sont revendues</p></li>
+    <li><p>publicité ciblée rémunératrice</p></li>
+    <li><p>Adwords payants</p></li>
+</ul>
+</p> 
+
+<p>Le trailer suivant introduit le documentaire <em>The Social Dilemma</em> réalisé par Netflix :
+    <a href="https://youtu.be/uaaC57tcci0" target="_blank">&#127911; video trailer Social Dilemma - Netflix</a>
+ qui présente l'utilisation des données enregistrées par les réseaux sociaux.</p>
+
+ <div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong>expliquez en détail les principales motivations qui poussent certaines entreprises et 
+        leurs sites Web à traquer nos données sur Internet.</p>
+    </div>
+
+    <p>"If you're not paying for something, you're not the customer, you're the product being sold" <em>Andrew Lewis</em></p>
+
+
+
+<!-- BULLE INFORMATIONNELLE -->
+<h3>Une bulle informationnelle</h3>    
+
+<p>Les algorithmes apprennent les préférences des utilisateurs en analysant leurs habitudes. Par la suite, les réseaux sociaux 
+    personnalisent l'information qu'ils proposent pour satisfaire ses utilisateurs. De ce fait, chaque utilisateur
+     ne reçoit qu'une information adaptée à ses préférences et finit par se persuader que la plupart des 
+     internautes partagent ses opinions. Ainsi un utilisateur trouve ce qu'il cherche et se voit proposer 
+     principalement les sujets qui l'intéressent et qui le confortent dans ses opinions. Les réseaux sociaux, de 
+     par leur nature, génèrent une désinformation rassurante pour l'utilisateur. Cette personnalisation de la désinformation 
+    s'appelle une bulle informationnelle.</p>
+
+<div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong><br/>
+        1) En effectuant une recherche sur Internet, indiquez ce que rapporte chaque année à
+         Google la vente de nos données personnelles recueillies en utilisant ce moteur de recherche.<br/>
+        2) Quelles sont vos attentes lorsque vous utilisez des réseaux sociaux ?<br/>
+        3) Quels avantages peut-on trouver à ce concept de bulle informationnelle ?<br/>
+        4) Pour quelle raison les influenceurs ont-ils autant d'importance sur les réseaux sociaux ?</p>
 </div>
 
-<h3>Le Deep Web</h3>
 
-<p>Le moteur de rechercher Google fournit un classement par pages de sites référencés, suite à la requête d'un utilisateur. Toutefois, toutes les pages Web ne sont pas référencées par les moteurs de recherche traditionnels comme Google, Yahoo, DuckDuckGo,... car elles en ont été volontairement exclues lors de leur création. Ces pages appartiennent au Deep Web, leurs interfaces graphiques sont souvent rudimentaires, proches de celles d'un moteur de recherche. Elles peuvent par exemple contenir les ressources volumineuses d'un serveur, des bases de données privées, des réseaux internes d'entreprises Intranet, et sont accessibles par mot de passe, parfois même payantes. Elles représentent la plus grande partie du Web (90 à 96%). Ce que nous consultons tous les jours s'appelle en fait le Web visible, et ne constitue donc qu'une petite partie des ressources du Web.</p>
+    <!-- LA DERIVE DES FAKE NEWS -->
+<h3>La dérive des fake news</h3>
 
-<p>Le Dark Web appartient au Deep Web, dont il représente une faible proportion. D'après l'entreprise de sécurité informatique <em>Kapersky</em>, "la réputation du Dark Web a souvent été liée à des intentions criminelles ou à des contenus illégaux et à des sites marchands où les utilisateurs peuvent acheter des biens ou des services illicites". Ainsi, le Dark Web fait référence à des sites non indexés, auxquels on ne peut pas accéder avec des navigateurs grand public. Il nécessite l'utilisation d'un VPN et d'un navigateur spécialisé comme Tor, et son accès n'est pas recommandé au regard des risques potentiels encourus. Toujours d'après l'entreprise <em>Kapersky</em> "les utilisateurs peuvent emprunter des chemins assez sinueux et se retrouver sur un site de piratage ou un forum extrémiste sur le plan politique, ou encore tomber sur des contenus d'une violence inquiétante."</p>
+<p>De nos jours, les influenceurs, susceptibles d'influencer le comportement et l'opinion d'un nombre important de consommateurs, obtiennent de véritables marchés commerciaux avec les entreprises. Ils sont également rémunérés par les réseaux sociaux en fonction du nombre de leurs abonnés.</p>
+
+<p>Malheureusement, pour obtenir une audience de plusieurs millions, certains n'hésitent pas à propager des images choc et de l'information mensongère. La dérive des fake news est largement critiquée par la télévision, qui n'est pas non plus exempte de tout reproche à cet égard.
+    On estime qu'une fake news se propage en moyenne 6 fois plus vite qu'une information confirmée.</p>
+
+
+
+ <p>Le trailer suivant introduit le documentaire <em>The Great Hack</em> réalisé par Netflix :
+    <a href="https://youtu.be/iX8GxLP1FHo" target="_blank">&#127911; video trailer Great Hack - Netflix</a>
+ qui présente comment l'information peut être transformée à des fins commerciales ou politiques.</p>
+ 
+ <div class="exerciceApplication">
+    <p><strong>A vous de jouer : </strong>quelle technique utilisez-vous pour déceler un fake news ?</p>
+</div>
+    
+<h3>Le harcèlement lié aux réseaux sociaux</h3>
+
+<p>L'article 222-33-2-2 du code pénal définit le harcèlement et les peines encourues :</p>
+<p>"Le fait de harceler une personne par des propos ou comportements répétés ayant pour objet ou pour effet une 
+    dégradation de ses conditions de vie se traduisant par une altération de sa santé physique ou mentale est puni 
+    d'un an d'emprisonnement et de 15 000 € d'amende lorsque ces faits ont causé une incapacité totale de travail 
+    inférieure ou égale à huit jours ou n'ont entraîné aucune incapacité de travail."</p>
+    
+    <div class="exerciceApplication">
+        <p><strong>A vous de jouer : </strong><br/>
+            1) Quels sont les éléments constitutifs de l'infraction qualifiée de harcèlement ?<br/>
+            2) Quelle est la différence entre le code pénal et le code de procédure pénale ?</p>
+        </div>
 
 {% endblock cours %}
-    
