--- a/home/templates/sources/nsi/internet/competence12.html
+++ b/home/templates/sources/nsi/internet/competence12.html
@@ -3,182 +3,201 @@
 
 {% block contenu %}
 <ul>
-    <li>la cybercriminalité peut prendre différentes formes</li>
-	<li>le phishing</li>
-	<li>les virus</li>
-	<li>le déni de service</li>
-	<li>la publicité malveillante</li>
-	<li>l'exploitation de vulnérabilités</li>
+    <li>modéliser les réseaux sociaux avec un graphe</li>
+    <li>modéliser les réseaux sociaux avec Python</li>
+    <li>matrice d'adjacence</li>
 </ul>
+<a href="{% static 'home/documents/memo_reseaux_sociaux.pdf' %}" download><button class="bouton3 bi bi-download"> Fiche mémo Réseaux sociaux </button></a><br/>
 {% endblock contenu %}
+
+{% block tampon %}
+<p class="tampon">COURS ...</p>
+{% endblock tampon %}
 
 {% block cours %}
 
 <h3>Introduction</h3>
 
-<div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>la plupart des risques encourus sur Internet sont liés aux utilisateurs. 
-		expliquez dans le détail comment il est possible de se faire piéger en se rendant sur un site, en répondant 
-	à un email, en consultant son smartphone, ... Quels sont donc les comportements à risque à éviter ?</p>
+<p>Merci Guillaume pour cette vidéo publiée par <em>Fun Mooc</em> qui détaille la représentation des réseaux sociaux : <br/>
+    <a href="https://www.youtube.com/watch?v=nn1mIqW9oYQ&feature=emb_logo" target="_blank">&#127911; vidéo Fun Mooc réseaux sociaux - YouTube</a></p>
+
+<h3>Modéliser les réseaux sociaux avec un graphe</h3>
+
+<p>Si on cherche à modéliser les réseaux sociaux, on s'aperçoit tout naturellement qu'ils sont composés de sommets ou noeuds représentés par des individus mis en relation par le biais d'un média. L'ensemble forme une structure qu'on appelle un graphe. Chaque personne du réseau dans les <em>Contacts</em> des autres personnes. Dans le langage des réseaux sociaux, on parle de <em>friends</em>.</p>
+
+<p>La page suivante publiée par <em>Numworks</em> explique comment modéliser simplement un réseau social :<br/>
+<a href="https://www.numworks.com/fr/ressources/snt/modelisation-reseau-social/" target="_blank">&#128211; lecture modéliser les réseaux sociaux - Numworks</a></p>
+
+
+<!-- vocabulaire -->
+<div>
+	<button class="btn_vocabulaire bi bi-hand-index" type="submit" onclick="affichageVocabulaire(this,'vocabulaire1');"> VOCABULAIRE ...</button>
+</div>
+<div id="vocabulaire1" class="vocabulaire">	
+    <p>La <strong>distance entre 2 sommets</strong> est définie par la longueur d'un plus court chemin entre ces 2 sommets.<p>
+    <p>Le <strong>diamètre d'un graphe</strong> est la plus grande distance possible qui puisse exister entre 2 quelconques de ses sommets.</p>
+    <p>Le <strong>centre d'un graphe</strong> est le ou les sommets dont la distance aux autres sommets est minimale.</p>
+    <p>Le <strong>rayon d'un graphe</strong> est la distance entre le ou les centres du graphe et le sommet le plus éloigné.</p>  
 </div>
 
-
-<!-- LA CYBERCRIMINALITE PEUT PRENDRE DIFFERENTES FORMES -->
-<h3>La cybercriminalité peut prendre différentes formes</h3>
-
-<p>Les principales menaces en cybercriminalité sont les suivantes :</p>
-	<ul>
-		<li>vol d’information, et parfois usurpation d’identité</li>
-		<li>destruction des données ou des ordinateurs, smartphones</li>
-		<li>défiguration de site Web (defacement)</li>
-		<li>modification d’information par un utilisateur non autorisé</li>
-		<li>déni de service DoS</li>
-		<li>publicité indésirable</li>
-		<li>escroquerie</li>
-	</ul>
-
-<p>Le mot malware est un terme général qui fait référence à un logiciel malveillant.</p>
-
-
-
-<h3>Le phishing</h3>
-
-<p>Il consiste à se faire passer pour une personne, un organisme ou une entreprise de confiance afin de 
-	demander des informations confidentielles à un victime. Celle-ci est amenée à cliquer sur un lien envoyé 
-	par email lui donnant accès à un site web ressemblant au site officiel, faisant ainsi croire à 
-	l’utilisateur qu’il navigue sur un site de confiance. Lorsque l'utilisateur tape ses informations 
-	confidentielles, celles-ci sont dérobées à son insu.</p>
-
-<p><em>Précautions à prendre : </em></p>
+<p><strong>Exercice type : </strong>trouver le diamètre, le centre et le rayon d’un graphe correspondant au réseau suivant :
 <ul>
-	<li>vérifier l'adresse d'origine de l'email, il est facile de confondre tresor-public@administration.fr et
-		tresor-public@adrninistration.fr</li>
-	<li>ne pas cliquer sur des liens dont la provenance n'est pas certifiée,</li>
-	<li>le cas échéant vérifier l'adresse du site sur lequel le lien nous a renvoyé,</li>
-	<li>vérifier l'orthogaphe dans le texte de l'email, il est fréquent que les emails frauduleux comportent 
-		de nombreuses fautes d'orthographes.</li>
-</ul>
+    <li><p>Anatole est ami avec Ethan, Daniel et Gérard</p></li>
+    <li><p>Barnabé est ami avec François et Kevin</p></li>
+    <li><p>Kevin est ami avec Barnabé, Charlie, Daniel et Ethan</p></li>
+    <li><p>François est ami avec Barnabé et Gérard</p></li>
+</ul></p>
 
+<p><i>Solution :</i></p>
+<p>Il faut commencer par tracer le graphe correspondant à l'énoncé.</p>
 
-<h3>Les virus</h3>
+<img src="{% static 'home/images/nsi/graphe.png' %}" alt="graphes" width=40%>
 
-<p>Il s'agit de logiciels malveillants installés sur l'ordinateur ou le smartphone d'une victime, le serveur 
-	d'un site Web ou d'une entreprise pour voler des informations, détruire le fonctionnement d'une machine 
-	ou d'un serveur et fournir un prétexte pour une rançon.</p>
-<p>Les différentes contaminations possibles sont les suivantes :</p>
-<ul>
-<li>par les supports amovibles (clés USB)</li>
-<li>par les pièces jointes des emails</li>
-<li>par les fichiers exécutables (extensions .EXE sur Windows, .PY s'il s'agit d'un script Python)</li>
-<li>par les fichiers multimedia .MP3, .MP4, .AVI, …</li>
-</ul>
+<p>Il faut ensuite construire un tableau dans lequel apparaissent les distances minimales entre chacun des sommets, et la plus grande de ces distances pour chacun des somments :</p>
 
-<p><em>Précautions à prendre : </em></p>
-<ul>
-	<li>ne pas télécharger des applications dont on ne connaît pas la réputation,</li>
-	<li>télécharger des applications à partir de la page officielle de la société qui la développe,</li>
-	<li>installer un antivirus sur son smartphone, sa tablette et son ordinateur,</li>
-	<li>"les Mac et les Iphones sont protégés naturellement des virus" est une légende urbaine,</li>
-	<li>scanner les supports amovibles à l'aide d'un anti-virus avant de les utiliser.</li>
-</ul>
+<table>
+    <tr><th></th><th>A.</th><th>G.</th><th>D.</th><th>K.</th><th>B.</th><th>F.</th><th>E.</th><th>C.</th><th>max</th></tr>
+    <tr><td><strong>A.</strong></td><td>0</td><td>1</td><td>1</td><td>2</td><td>3</td><td>2</td><td>1</td><td>3</td><td>3</td><tr>
+    <tr><td><strong>G.</strong></td><td>1</td><td>0</td><td>2</td><td>3</td><td>2</td><td>1</td><td>2</td><td>4</td><td>4</td><tr>
+    <tr><td><strong>D.</strong></td><td>1</td><td>2</td><td>0</td><td>1</td><td>2</td><td>3</td><td>2</td><td>2</td><td>3</td><tr>
+    <tr><td><strong>K.</strong></td><td>2</td><td>3</td><td>1</td><td>0</td><td>1</td><td>2</td><td>1</td><td>1</td><td>3</td><tr>
+    <tr><td><strong>B.</strong></td><td>3</td><td>2</td><td>2</td><td>1</td><td>0</td><td>1</td><td>2</td><td>2</td><td>3</td><tr>
+    <tr><td><strong>F.</strong></td><td>2</td><td>1</td><td>3</td><td>2</td><td>1</td><td>0</td><td>3</td><td>3</td><td>3</td><tr>
+    <tr><td><strong>E.</strong></td><td>1</td><td>2</td><td>2</td><td>1</td><td>2</td><td>3</td><td>0</td><td>2</td><td>3</td><tr>
+    <tr><td><strong>C.</strong></td><td>3</td><td>4</td><td>2</td><td>1</td><td>2</td><td>3</td><td>2</td><td>0</td><td>4</td><tr>
+</table>
 
-<h4>Les worms</h4>
+<p>Dans la dernière colonne, la plus grande distance relevée vaut 4 entre Gérard et Charlie. Elle correspond au diamètre. La plus petite distance relevée vaut 3. Elle correspond au rayon. Attention, dans un graphe le rayon n'est pas défini comme la moitié du diamètre. Tous les sommets pour lesquels cette distance vaut 3 sont les centres du graphe. Ainsi, Anatole, Daniel, Kevin, Barnabé, François et Ethan sont des centres du graphe. Il n'existe donc pas un unique centre, mais plusieurs centres qui correspondent aux sommets dont la distance aux autres sommets est minimale.</p>
 
-<p>Il s'agit d'un type d'attaque particulier qui utilise un carnet d'adresse pour se propager. 
-	Lorsque le hacker a obtenu l'accès au carnet d'adresse d'un compte WhatsApp, Google, Outlook, ..., 
-	il infecte les autres membres du réseau, sans se dévoiler ou en se faisant passer pour un ami au sein 
-	du réseau.</p>
-
-<h4>Les trojans</h4>
-
-<p>Il s'agit d'un certain type de virus qui s'insèrent dans une machine puis donnent accès aux ressources 
-	de cette machine à l'insu de son propriétaire.</p>
-
-<h4>Les spywares</h4>
-
-<p>Il s'agit d'un terme général relatif à un malware qui espionne les actions d'un utilisateur sur son 
-	ordinateur ou son smartphone, pour récupèrer des informations à partir d'une machine infectée. Ce vol 
-d'information peut ensuite être utilisé pour usurper l'identité de quelqu'un afin de créer des abonnements 
-ou de faire des achats au nom d'un autre, d'ouvrir des prêts bancaires. On parle dans ce cas de spoofing.</p>
-
-<h4>Les botnets</h4>
-
-<p>Il s'agit d'un ensemble de robots informatiques qui se déploient sur de grandes quantités de machines 
-	pour les utiliser comme relais d'attaques ou de spams. On parle également de réseaux zombies.</p>
-	
-
-<h3>Le déni de service</h3>
-
-<p>Il consiste à paralyser un réseau, un serveur ou un site Web pour que les utilisateurs ne puissent plus
-	en obtenir l'accès. D'innombrables requêtes sont transmises en même temps à un serveur pour le saturer. 
-	Le déni de service distribué utilise plusieurs machines relais à partir d'une seule machine pour saturer 
-	un système.</p>
-
-<p>Il arrive que parfois le déni de service n'entraîne qu'un ralentissement du système. On parle dans ce 
-	cas de downtime.</p>
-
-<p>Le déni de service s'accompagne généralement d'une demande de rançon.</p>
-
-
-
-
-<h3>La publicité malveillante</h3>
-
-<h4>Les Spams</h4>
-
-<p>Il s'agit d'une technique de marketing consistant à diffuser massivement par email de la publicité non sollicitée par les utilisateurs.</p>
-
-
-<h4>Les adware</h4>
-
-<p>Il s'agit d'un logiciel qui présente des publicités non sollicités, souvent sous forme de fenêtre pop-up.</p>
-
-<p><em>Précautions à prendre : </em></p>
-
-<ul><li>utiliser un ad-blocker</li></ul>
-
-<h4>Les browser-hijackers</h4>
-
-<p>Il s’agit de modifications du navigateur sans la permission de l’utilisateur pour afficher des publicités
-	 ou enregistrer l’activité de l’utilisateur. Un browser-hijacker peut par exemple être utilisé pour 
-	 générer de fausses alertes de sécurité afin d'inciter à acheter un anti-virus.</p>
-
-
-<h3>Le Scam</h3>
-
-<p>Il s'agit d'une forme d'escroquerie qui utilise les technologies modernes pour exploiter 
-	la naïveté des utilisateurs afin qu'ils fournissent de leur plein gré des données confidentielles ou 
-	de l'argent. Le hacker peut se faire passer pour un agent de l'état, un membre de l'organisation ou 
-l'entreprise pour laquelle il travail, un membre de sa famille, une personne en détresse, ...</p>
-
-
-
-
-
-
-<h3>Exploitation de vulnérabilités</h3>
-
-<p>L’exploitation de vulnérabilité consiste à abuser de failles connues dans les navigateurs, les applications web, les réseaux, les systèmes d'exploitation et les applications de la machine.</p>
-
-<p>L'une des techniques d'exploitation de vulnérabilité les plus utilisées sur le Web est l'injection SQL, qui consiste à insérer dans un formulaire non protégé du code SQL capable d'altérer ou de détruire la base de données sur laquelle évolue le site Web attaqué.</p> 
-
-<p>Une autre technique de hacking sur le Web très utilisée est le Cross Site Scripting XSS, qui injecte du code côté client sur les pages Web visitées par d'autres utilisateurs, et permet de se connecter en tant qu'un autre utilisateur sans connaître le mot de passe de cet utilisateur.</p>
-
-<p>Toutes les vulnérabilités recensées sont enregistrées dans le répertoire du CVE afin d'en conserver l'historique et le mode opératoire. Tout individu peut contribuer à cette base de données en publiant une nouvelle vulnérabilité.</p>
-
-<h4>Exemple d'analyse de vulnérabilié</h4>
-
-<div class="row">
-    <div class="col-12">
-		<iframe src="{% static 'home/documents/Analyse_cross_site_scripting.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
-	</div>
-</div>
-
-<h3>Se tester</h3>
 
 <div class="exerciceApplication">
-	<p><strong>A vous de jouer : </strong>testez vos connaissances en matière de sécurité avec le quizz de Swisscom : 
-	<a href='https://www.swisscom.ch/fr/b2bmag/securite/quiz-securite-it-pme/' target="_blank">https://www.swisscom.ch/fr/b2bmag/securite/quiz-securite-it-pme/</a></p>
+    <p><strong>A vous de jouer :</strong> trouver le diamètre, le rayon et le ou les centres du graphe représentant les relations suivantes:
+        <ul>
+            <li><p>Antoine est en relation avec Bénédicte et Corinne</p></li>
+            <li><p>Bénédicte est en relation avec Antoine et Daniel</p></li>
+            <li><p>Corinne est en relation avec Antoine, Daniel et Franck</p></li>
+            <li><p>Franck est en relation avec Emin, Corinne et Henri</p></li>
+        </ul>
+    </p>
 </div>
+
+
+<!-- MODELISER LES RESEAUX SOCIAUX EN PYTHON -->
+<h3>Modéliser les réseaux sociaux en Python</h3>
+
+<p>On peut relier les différents amis d'un réseau en utilisant en Python une structure de listes, 
+    une structure de dictionnaires, ou une structure de matrice d'adjacence.</p>
+
+
+<h4>Modéliser avec une liste</h4>
+
+<p>Par exemple, à partir du graphe présenté dans l'exemple ci-dessus, on peut utiliser une structure de listes.
+     On crée dans ce cas une liste de listes (appelée matrice), qu'on peut écrire :</p>
+
+<pre><code class="language-python">reseau = [
+    ['Gérard', 'Daniel', 'Ethan'],
+    ['François', 'Kevin'],
+    ['Kevin'],
+    ['Anatole', 'Kevin'],
+    ['Anatole', 'Kevin'],
+    ['Barnabé', 'Gérard'],
+    ['Anatole', 'François'],
+    ['Ethan', 'Barnabé', 'Daniel', 'Charlie']
+]</code></pre>
+
+<p>où la 1ère liste représente les liens d'Anatole, la 2ème liste représente les liens de Barnabé, 
+    la 3ème liste les liens de Charlie, la 4ème liste les liens de Daniel, la 5ème liste les liens 
+    de Ethan, la 6ème liste les liens de François, la 7ème liste des liens de Gérard, la 8ème liste 
+    les liens de Kevin.</p>
+
+<p>On peut également ne tenir compte que des indices des membres du réseau qui sont en relation, comme 
+    dans l'exemple ci-dessous :</p>
+
+<pre><code class="language-python">reseau = [
+    [3, 4, 6],
+    [5, 7],
+    [7],
+    [0, 7],
+    [0, 7],
+    [1, 6],
+    [0, 5],
+    [1, 2, 3, 4]
+]</code></pre>
+
+
+<h4>Modéliser avec un dictionnaire</h4>
+
+<p>On peut utiliser une structure de dictionnaire dont les clés sont les prénoms et les valeurs des listes 
+    correspondant aux friends de chaque personne. On peut écrire dans ce cas :</p>
+
+<pre><code class="language-python">reseau = {
+    'Anatole': ['Gérard', 'Daniel', 'Ethan'],
+    'Barnabé': ['François', 'Kevin'],
+    'Charlie': ['Kevin'],
+    'Daniel': ['Anatole', 'Kevin'],
+    'Ethan': ['Anatole', 'Kevin'],
+    'François': ['Barnabé', 'Gérard'],
+    'Gérard': ['Anatole', 'François'],
+    'Kevin': ['Ethan', 'Barnabé', 'Daniel', 'Charlie']
+}</code></pre>
+
+
+<h4>Modéliser avec une matrice d'adjacence</h4>
+
+<p>Il est également possible de représenter un réseau social à travers une sorte de tableau à double entrée 
+    appelé matrice d'adjacence. Le principe est simple, si il existe un lien entre les personnes A et B alors 
+on inscrit le chiffre 1 dans la matrice dans la zone faisant correspondre A et B. Dans le cas contraire on 
+inscrit 0 dans la matrice.</p>
+
+<p>Cette notion de matrice d'adjacence existe également dans un cadre plus général que celui des réseaux sociaux, comme
+    par exemple dans un réseau informatique ou un réseau routier. On peut alors inscrire à la place du chiffre 1 une valeur
+     plus précise représentant les kilomètres, le temps de parcours ou le débit binaire.</p>
+
+<p>Reprenons l'exemple ci-dessus. La matrice d'adjacence est :</p>
+
+<p>0 0 0 1 1 0 1 0<br/>
+   0 0 0 0 0 1 0 1<br/>
+   0 0 0 0 0 0 0 1<br/>
+   1 0 0 0 0 0 0 1<br/>
+   1 0 0 0 0 0 0 1<br/>
+   0 1 0 0 0 0 1 0<br/>
+   1 0 0 0 0 1 0 0<br/>
+   0 1 1 1 1 0 0 0</p>
+
+<p>On peut traduire cette matrice d'adjacence en Python à l'aide d'une liste de listes, mais cette fois 
+    il n'est pas nécessaire d'utiliser les prénoms des membres du réseau Anatole, Barnabé, Charlie, ... .
+    La 1ère ligne représente Anatole, la 2ème ligne représente Barnabé, la 3ème ligne représente Charlie, ..., 
+    la 1ère colonne représente Anatole, la 2ème colonne représente Barnabé, la 3ème colonne représente 
+    Charlie, ... . On obtient ainsi :</p>
+
+<pre><code class="language-python">reseau = [
+    [0, 0, 0, 1, 1, 0, 1, 0],
+    [0, 0, 0, 0, 0, 1, 0, 1],
+    [0, 0, 0, 0, 0, 0, 0, 1],
+    [1, 0, 0, 0, 0, 0, 0, 1],
+    [1, 0, 0, 0, 0, 0, 0, 1],
+    [0, 1, 0, 0, 0, 0, 1, 0],
+    [1, 0, 0, 0, 0, 1, 0, 0],
+    [0, 1, 1, 1, 1, 0, 0, 0]
+]</code></pre>
+
+
+     <div class="exerciceApplication">
+        <p><strong>A vous de jouer :</strong> Soient sept personnes, André, Béatrice, Clyde, Dona, Emin, 
+            Françoise et Gérard. On connaît les liens suivants entre elles :</p>
+            <ul>
+                <li><p>André est ami avec Françoise et Dona.</p></li>
+                <li><p>Béatrice est amie avec Clyde et Dona.</p></li>
+                <li><p>Clyde est ami avec Gérard.</p></li>
+                <li><p>Dona est amie avec Emin.</p></li>
+                <li><p>Emin est ami avec Gérard.</p></li>
+                <li><p>Françoise est amie avec Béatrice.</p></li>
+            </ul>
+            <p>a) Dessinez le réseau de ces sept personnes.<br/>
+            b) Représentez la matrice d’adjacence de ce réseau.<br/>   
+            c) Quel est le diamètre de ce réseau ?<br/>   
+            d) Quel serait le diamètre de ce réseau si Gérard et Béatrice devenaient amis ?<br/>   
+            e) Quel serait le diamètre de ce réseau si Françoise et Emin étaient amis ?</p>
+    </div>
 
 {% endblock cours %}
