--- a/home/templates/sources/nsi/internet/competence14.html
+++ b/home/templates/sources/nsi/internet/competence14.html
@@ -3,16 +3,46 @@
 
 {% block contenu %}
 <ul>
-    
+    <li>qu'est-ce que Bootstrap</li>
+    <li>comment intégrer Bootstrap à un site</li>
 </ul>
 {% endblock contenu %}
 
-{% block cours %}
+{% block tampon %}
+<p class="tampon">COURS ...</p>
+{% endblock tampon %}
 
-<div class="row">
-    <div class="col-12">
-        <iframe src="{% static 'home/documents/TP_reseauxSociaux.pdf' %}" height='1200px' width='1100px' type='application/pdf'></iframe>
-    </div>
-</div>
+{% block cours %}
+<h3>Qu'est-ce que Bootstrap ?</h3>
+
+<p>Bootstrap est un framework open source pour le développement HTML-CSS d'un site. Sa philosophie 
+  consiste toujours à séparer le fond (HTML) de la forme (CSS), mais propose des classes toutes 
+  faites qu'il suffit d'invoquer dans le code HTML. Cela facilite la compréhension du code HTML 
+  et augmente la vitesse de création d'un site, vu que de nombreuses possibilités ont déjà été 
+  codées en CSS.</p>
+  
+<p>Bootstrap utilise un système de containers dans lesquels il fait évoluer des
+  blocs suivant une structure CSS de type grid ou flex. Par ailleurs, ces blocs se trouvent
+  répartis dans tout l'écran, qui est virtuellement composé de 12 colonnes. Cela facilite la 
+  construction responsive du site, qui est devenue indispensable de nos jours.</p>
+
+<p>En résumé, Bootstrap propose une structure de code et des outils afin d'augmenter la productivité 
+  du développeur et de rendre le site design responsive dès sa construction.</p>
+
+<p>Boostrap utilise JavaScript, JQuery et des variables Sass pour son fonctionnement mais ne 
+  modifie pas le design pattern utilisé pour développer votre site Web.</p>
+
+
+<!-- COMMENT INTEGRER BOOTSTRAP -->
+<h3>Comment intégrer Bootstrap à un site</h3>
+
+<p>Il suffit de rajouter dans la partie head du site les balises suivantes :</p>
+
+<pre><code class="language-html">&lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"&gt;
+&lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"&gt;&lt;/script&gt;</code></pre>
+
+<p>Il convient de mettre à jour la dernière version de Bootstrap en remplaçant <strong>bootstrap@5.3.2</strong> par 
+le numéro de version le plus récent, qu'on trouve facilement sur le site officiel <a href="https://getbootstrap.com/" target="_blank">getbootstrap.com</a></p>
 
 {% endblock cours %}
+    
