--- a/home/templates/sources/python/progresser/competence1.html
+++ b/home/templates/sources/python/progresser/competence1.html
@@ -3,172 +3,119 @@
 
 {% block contenu %}
 <ul>
-    <li href="#range">découvrir la boucle for pour répéter un bloc</li>
-    <li href="#structure_range">comprendre la structure d'une boucle for avec range</li>
-    <li href="#imbriquees">découvrir les boucles for imbriquées</li>
+    <li>nommer les variables convenablement</li>
+    <li>commenter le code</li>
+    <li>utiliser le debugger de code</li>
+    <li>utiliser des tests après chaque fonction</li>
 </ul> 
 {% endblock contenu %}
 
 {% block cours %}
 
-<!-- BOUCLE FOR AVEC RANGE -->
+<!-- LES NOMS DE VARIABLES -->
 
-<p class="my-5 invisible" id="range">ancre</p>
+<h3>Le choix du nom des variables</h3>
 
-<h3>Découvrir la boucle for pour répéter un bloc</h3>
+<p>Il est important de construire un code propre, pour comprendre ce que fait le code lorsqu'on l'a abandonné 
+    pendant une longue période ou pour faciliter le travail collaboratif. Pour cela, les variables doivent avoir un nom clair ayant une véritable signification.</p>
 
-<figure>
-    <iframe width="854" height="480" src="https://www.youtube.com/embed/vkEfGC-aYBM"
-            title="La boucle for en Python ToKeTa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-gyroscope; picture-in-picture" allowfullscreen> </iframe>
-    <figcaption> La boucle for, <em>ToKeTa</em> </figcaption>
-</figure>
+<p>Par exemple le code suivant n'est pas vraiment lisible :</p>
 
-<p>Python permet de répéter une instruction un certain nombre de fois. Lorsqu'on connaît le nombre de répétitions, on utilise la boucle <strong>for</strong>. Lorsqu'on ne connaît pas le nombre de répétitions et que celui-ci dépend de l'évolution de la situation (par exemple si le nombre de vies d'un joueur devient nul), alors dans ce cas on utilise la boucle <strong>while</strong>.</p>
+<pre><code class="language-python">import math
+f = 3
+g = 4.5
+t = math.sqrt(f ** 2 + g ** 2)</code></pre>
 
-<p>Par exemple, pour répéter <em>bonjour</em> 5 fois, il suffit d'écrire</p>
+<p>Alors que si les noms des variables avaient une signification claire, le code serait plus lisible. Voici le 
+    même code en changeant simplement les noms de variables :</p>
 
-<pre><code class="language-python">for i in range(5):
-    print("bonjour")</code></pre>
-
-<p>Si vous avez déjà pratiqué la programmation en Scratch, le script ci-dessus correspond en fait au code Scratch suivant que vous connaissez bien</p>
-
-<img src="{% static 'home/images/python/codeScratchFor.png' %}" width="15%" alt="code scratch">
-
-<p>Dans l'instruction <strong>for i in range(5):</strong>, i va prendre les valeurs entières comprises entre 0 et 4.
-Il y aura de ce fait 5 répétitions de l'instruction <strong>print("bonjour")</strong>. En fait, l'instruction
-<strong>range(5)</strong> crée une liste de 5 nombres allant de 0 à 4 dans laquelle va piocher
-l'indice i.</p>
-
-<div class=fieldsetDefinition>
-    <h4>A RETENIR ...</h4>
-    <p>L'indice i d'une boucle <strong>for</strong> commence par défaut par 0.
-    La dernière valeur prise par cet indice est l'entier strictement inférieur à celui mentionné.</p>
-</div>
+<pre><code class="language-python">import math
+cote1 = 3
+cote2 = 4.5
+hypotenuse = math.sqrt(f ** 2 + g ** 2)</code></pre>
 
 <div class="exerciceApplication">
-<p><strong>A vous de jouer :</strong> écrire un code permettant d'afficher la table de multiplication de 16</p>
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution1');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution1" style="display:none;">
-        <pre><code class="language-python">for i in range(11):
-    print("16 fois", i,"égale", 16 * i)</code></pre>
-</div>
+    <p><strong>A toi de jouer : </strong>Parmi les noms suivants, lesquels sont des noms valides de variables ?</p>
+    <p>les_noms, lesNoms, LesNoms, 2noms, print, les noms</p>
 </div>
 
+<!-- LES COMMENTAIRES -->
+
+<h3>Les commentaires</h3>
+
+<p>On retrouve essentiellement des commentaires au début de chaque fichier (appelé module) pour expliquer l'objectif du programme, 
+    puis au début de chaque fonction pour expliquer son rôle et ce dont elle a besoin pour s'exécuter.</p>
+
+<p>Les commentaires sur plusieurs lignes sont entourées de """, alors que les commentaires d'une seule ligne sont 
+    précédés de #.</p>
+
+<pre><code class="language-python">"""This module compares the results obtained between 2 points with 2 kinds of distances, the distance of 
+Euclide and the distance of Manhattan."""
+
+import math
+M1 = (2, 4)
+M2 = (-1, 3)
+
+def calculerEuclide(M, N):
+    """finds the length between points M and N which coordinates are given, using square roots.
+    @param:
+        M (tuple): coordinates of point M 
+        N (tuple): coordinates of point N 
+    @return:
+        (float): distance of Euclide between points M and N
+    """
+    return math.sqrt((M[0] - N[0]) ** 2 + (M[1] - N[1]) ** 2)
+
+def calculerManhattan(M, N):
+    """finds the length between points M and N which coordinates are given, using absolute values.
+    @param:
+        M (tuple): coordinates of point M 
+        N (tuple): coordinates of point N 
+    @return:
+        (float): distance of Manhattan between points M and N
+    """
+    return math.sqrt((M[0] - N[0]) ** 2 + (M[1] - N[1]) ** 2)
+
+print("Distance de Euclide : " + calculerEuclide(M, N))
+print("Distance de Manhattan : " + calculerManhattan(M, N))</code></pre>
+
+<p>Les commentaires de fonctions appelés docstrings sont essentiels et permettent de comprendre ce que fait une fonction 
+    au milieu d'un programme sans avoir à se rendre dans la partie du programme qui définit cette fonction. Les docstrings ne 
+sont pas lues par le programme au moment de son exécution. Ils sont destinés au développeur. On peut donc voir le 
+descriptif d'une fonction qu'on exécute à la ligne 1204 alors qu'elle a été définie à la ligne 30 ou dans autre fichier, comme 
+dans l'exemple ci-dessous.</p>
+
+<img src="{% static 'home/images/python/docstring.png' %}">
+
+<p>Il est par ailleurs possible de fournir des informations supplémentaires au programme, comme par exemple le type 
+    des variables utilisées dans une fonction ou le type retourné par une fonction. On fournit alors ces indications 
+    dans la signature de la fonction, c'est à dire la première ligne de la définition de cette fonction, comme par exemple :</p>
+
+<pre><code class="language-python">def calculerEuclide(M: float, N: float) -> float:</code></pre>
+
+<p>Python est un langage faiblement typé, 
+    c'est à dire qu'il n'impose pas la définition d'un type de variable, et permet le changement de type d'une variable 
+    dans un même programme. Toutefois, il n'est pas capable de concaténer une chaine et un nombre ou de les comparer, et 
+    dans ce cas il déclenche une erreur.</p>
 
 
-<!-- BOUCLE FOR AVEC RANGE -->
+<!-- LE DEBUGGER DE VISUAL STUDIO -->
+<h3>Utiliser le debugger de Visual Studio Code</h3>
 
-<p class="my-5 invisible" id="structure_range">ancre</p>
 
-<h3>Structure d'une boucle for avec range</h3>
+<!-- TESTER CHAQUE FONCTION-->
+<h3>Tester chaque fonction</h3>
 
-<p>Il est possible de personnaliser les répétitions en modifiant le pas ou le nombre de départ.</p>
+<p>Lorsqu'on crée une fonction, il faut immédiatement tester son bon fonctionnement avec des paramètres dont on 
+    connaît les résultats qu'ils fournissent. Pour cela, on utilise l'instruction assert, comme dans l'exemple ci-dessous :</p>
 
-<pre><code class="language-python">for i in range(0, 7):  # répétition pour i allant de 0 à 6
-    print("bonjour")
-        
-for i in range(2, 9):  # i varie de 2 à 8
-    print(i, end=" ")  # affiche 2 3 4 5 6 7 8
-
-for i in range(0, 11, 2):  # i varie de 0 à 10 en augmentant de 2
-    print(i, end=" ")  # affiche 0 2 4 6 8 10
-
-for i in range(7, 3, -1):  # i varie de 7 à 4 en descendant de 1
-    print(i, end=" ")  # affiche 7 6 5 4</code></pre>
-
-<div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>essayez les codes précédents pour bien comprendre
-        l'utilisation de la boucle <strong>for</strong> avec <strong>range</strong>.</p>
-</div>
-
-<p> En revanche, on ne peut augmenter le pas que d'un nombre <em>entier</em>. Si on souhaite utiliser un pas décimal,
-    il faut alors utiliser l'instruction <strong>arange</strong> du module <strong>numpy</strong>, qu'il faut
-    commencer par importer.</p>
-
-<pre><code class="language-python">from numpy import *
-
-for i in numpy.arange(0, 1.1, 0.1):  # i varie de 0 à 1.0 en augmentant de 0.1
-    print(i, end=" ")  # affiche 0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1.0</code></pre>
-
-<div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>afficher tous les nombres entiers compris entre 1 et 9
-    avec le symbole | entre chaque terme, mais pas à la fin de l'affichage.</p>
-
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution2');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution2" style="display:none;">
-        <pre><code class="language-python">for i in range(1, 10):
-    if i == 9:
-        print(i)
+<pre><code class="language-python">def calculerSurface(largeur, longueur):
+    if largeur < 0 or longueur < 0:
+        return -1
     else:
-        print(i, end=" | ")</code></pre>
+        return largeur * longueur 
 
-    </div>
+assert calculerSurface(3, 2) == 6, "erreur de calcul de surface"
+assert calculerSurface(-3, 2) == -1, "erreur de calcul de surface pour cote negatif"</code></pre>
 
-
-
-
-</div>
-
-
-
-<!-- BOUCLES IMBRIQUEES -->
-
-<p class="my-5 invisible" id="imbriquees">ancre</p>
-
-<h3>Boucles for imbriquées</h3>
-
-<center>
-    <figure>
-        <iframe width="854" height="480" src="https://www.youtube.com/embed/ZMjF4JcR7Go"
-                title="Boucles imbriquées en Python ToKeTa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-    gyroscope; picture-in-picture" allowfullscreen> </iframe>
-        <figcaption> Boucles imbriquées en Python, <em>ToKeTa</em> </figcaption>
-    </figure>
-</center>
-
-<p>Il est tout à fait possible d'intégrer le bloc d'une boucle <strong>for</strong> dans une autre boucle <strong>for</strong>. Par
-exemple pour afficher :</p>
-
-<pre><code class="language-svg">* * *
-* * *
-* * *</code></pre>
-
-<p>on peut utiliser l'instruction suivante :</p>
-
-<pre><code class="language-python">for i in range(3):
-    for j in range(3):
-        print("*", end=" ")</code></pre>
-
-<p>où on répète 3 fois la répétition de 3 étoiles sur une ligne.</p>
-
-<p>On a déjà écrit la table de multiplication de 16 en utilisant la boucle <strong>for</strong>.
-Cherchons maintenant à afficher les tables de multiplication de 2 jusqu'à la table de 7.</p>
-
-<div class="exerciceApplication">
-    <p><strong>A vous de jouer : </strong>écrire le code des tables de multiplication de 2 jusqu'à la
-    table de 7, en multipliant par tous les entiers entre 1 et 11 inclus.</p>
-
-    <div>
-        <p><button class='bouton' type="submit" onclick="affichageConditionnel(this,'solution3');"> Voir la solution </button></p>
-    </div>
-
-    <div id="solution3" style="display:none;">
-        <p>Solution :</p>
-        <pre><code class="language-python">
-for i in range(2, 8): # 2 3 4 5 6 7
-    print(f"table de {i}")
-    for j in range(1, 12): # 1 2 3 4 5 6 7 8 9 10 11
-        print(i, "fois", j, "égal à", i * j)
-    print()</code></pre>
-    </div>
-
-</div>
-
-{% endblock cours %}
+    {% endblock cours %}
